@@ -6,6 +6,8 @@ Bugfixes:
 * Fixed incorrect encoding of URLs when using the 'url' attribute for rewrite rules.
 * MultiPageMessagesSupport doesn't duplicate messages any more if using MyFaces.
 * Fixed potential NullPointerExceptions on FacesContext access.
+* Ignore query parameters that are not correctly encoded (#88)
+
 
 ------------------------------------
            VERSION 3.2.0
